--- a/app.html
+++ b/app.html
@@ -5,6 +5,6 @@
 "version": "0.11.0",
 "content": "测试版本",
 "force": "false",
-"url": "https://633233.xyz".
-"pwd": "false"
+"url": "https://633233.xyz",
+"pwd": "false".
 ——end——
